# tarsy

./: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  Untitled  codecov.yml  coverage.html  go.mod  go.sum
dashboard/: app.js  index.html  styles.css
deploy/: .env.example  README.md  openshift.env.example  podman-compose.yml
docs/: architecture-context.md  architecture-overview.md  functional-areas-design.md  phase10-kubernetes-deployment-design.md  phase10-kubernetes-deployment-questions.md  phase2-configuration-system-design.md  phase2-configuration-system-questions.md  phase2-database-persistence-design.md  phase2-database-schema-questions.md  phase2-queue-worker-system-design.md  phase2-queue-worker-system-questions.md  phase3-base-agent-architecture-design.md  phase3-base-agent-architecture-questions.md  phase3-iteration-controllers-design.md  phase3-iteration-controllers-questions.md  phase3-native-tool-events-design.md  phase3-native-tool-events-questions.md  (+32 more)
llm-service/: .coverage  Dockerfile  pyproject.toml
llm-service/llm/: __init__.py  gemini_client.py  models.py  server.py  servicer.py
llm-service/llm/providers/: __init__.py  base.py  google_native.py  langchain_provider.py  langchain_stub.py  registry.py  tool_names.py
llm-service/llm_proto/: llm_service_pb2.py  llm_service_pb2.pyi
llm-service/proto/: __init__.py  llm_service_pb2.py  llm_service_pb2.pyi  llm_service_pb2_grpc.py
llm-service/tests/: test_google_native.py  test_langchain_provider.py  test_registry.py  test_servicer.py  test_tool_names.py
(+1080 files in other folders)
